--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang='en'>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Love</title>  
+  </head>
 
 <body>
-  <h1>Tina, Klevoo</h1>
-  <p>Tdon shum!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <h1>Tina&Klevoo</h1>
+  <p>Tina klevo tdon ty ekstrrem shum per arsyje se:!</p>
+  <ol>
+    <li>Je e bukur</li>
+    <li>Je e mir</li>
+    <li>Je e ngushme(kaniher)</li>
+    <li>Je e respektushme</li>
+    <li>Edhe lyp rreh kaniher</li>
+  </ol>
+  <h2>But never the less i love you</h2>
+  <img src='https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.gracetyler.org%2Fjay-blogs-rightly-ordered-loves%2F&psig=AOvVaw3sMdqeQoJLQ3N1y59VKOUg&ust=1713825472148000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMj7psev1IUDFQAAAAAdAAAAABAK'/>
+  
 </body>
 
 </html>
